src/test/compile-fail/bad-const-type.rs
// error-pattern:expected str but found int

const i: str = 10;
fn main() { log_full(core::debug, i); }
